# skillkeeper

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  versions.json  vitest.config.ts
.github/: release-key.asc
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0-rc.2/: 404.html  index.html  sitemap.xml
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1-rc.1/: 404.html  index.html  sitemap.xml
0.1.1-rc.2/: 404.html  index.html  sitemap.xml
0.1.2-rc.1/: 404.html  index.html  sitemap.xml
0.2.0-rc.1/: 404.html  index.html  sitemap.xml
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.mac.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/deb/: main.desktop
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs  util.rs
apps/desktop/src-tauri/src/app/: editor_launch.rs  i18n.rs  icon_sanitize.rs  menu.rs  mod.rs  ssh_agent.rs  theme.rs  watcher.rs
apps/desktop/src-tauri/src/commands/: config.rs  dialog.rs  editors.rs  integration.rs  mcp.rs  mod.rs  onboarding.rs  projects.rs  repositories.rs  skills.rs  state_read.rs  terminal.rs  window.rs
apps/desktop/src-tauri/src/pty/: git_in_shell.rs  manager.rs  mod.rs  shell_integration.rs
crates/skillkeeper-cli/: Cargo.toml
crates/skillkeeper-cli/src/: error.rs  main.rs  messages.rs  testutil.rs  updates.rs  wiring.rs
crates/skillkeeper-cli/src/commands/: agenthelpers.rs  check.rs  config.rs  mcp.rs  mod.rs  project.rs  repo.rs  skill.rs  version.rs
crates/skillkeeper-config/: Cargo.toml
crates/skillkeeper-config/src/: lib.rs  load.rs  schema.rs
crates/skillkeeper-core/: Cargo.toml
crates/skillkeeper-core/src/: frontmatter.rs  git_remote.rs  glob.rs  hashing.rs  lib.rs  models.rs  ports.rs  testing.rs  time.rs
crates/skillkeeper-core/src/adapters/: host_env.rs  mod.rs  real_clock.rs  std_fs.rs  system_git.rs
crates/skillkeeper-core/src/hooks/: guidance.rs  json.rs  mod.rs  region.rs
crates/skillkeeper-core/src/install/: install.rs  mod.rs  verify.rs
crates/skillkeeper-core/src/mcp/: config.rs  gitignore_ensure.rs  hashing.rs  install.rs  mod.rs  model.rs  naming.rs  params.rs  skmcp.rs  writers.rs
crates/skillkeeper-core/src/skills/: mod.rs  repo_config.rs  resolver.rs  skid.rs
crates/skillkeeper-core/src/state/: mod.rs  scheduler.rs  state.rs
dev/: 404.html  index.html  sitemap.xml
docs/: agents.md  architecture.md  cli.md  configuration.md  development.md  getting-started.md  index.md  mcp.md  projects.md  releasing.md  repositories.md  security.md  skills-and-hooks.md  troubleshooting.md
locales/: be.po  de.po  en.po  es.po  fr.po  it.po  ja.po  ko.po  pl.po  pt.po  ru.po  sr-cyrl.po  sr-latn.po  uk.po  zh-cn.po  zh-tw.po
scripts/: bump-version.mjs  check-version.mjs  ensure-electron.mjs  (+8 more)
(+594 files in other folders)
