[package]
name = "skillkeeper-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
skillkeeper-core = { path = "../skillkeeper-core" }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ts-rs = { workspace = true }
