[package]
name = "skillkeeper"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "skillkeeper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { workspace = true }
skillkeeper-core = { path = "../../../crates/skillkeeper-core" }
skillkeeper-config = { path = "../../../crates/skillkeeper-config" }
skillkeeper-agents = { path = "../../../crates/skillkeeper-agents" }
opener = "0.8"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
portable-pty = "0.9"
gettext = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSUserDefaults", "NSArray", "NSString"] }
